; ModuleID = '/home/carl/AnghaBench/memcached/extr_crawler.c_do_lru_crawler_start.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_crawler.c_do_lru_crawler_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64 }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { i32 }

@lru_locks = common dso_local global i32* null, align 8
@crawlers = common dso_local global %struct.TYPE_8__* null, align 8
@settings = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"Kicking LRU crawler off for LRU %u\0A\00", align 1
@LRU_CRAWLER_CAP_REMAINING = common dso_local global i64 0, align 8
@crawler_count = common dso_local global i32 0, align 4
@stats_state = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@stats = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64)* @do_lru_crawler_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_lru_crawler_start(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* %3, align 8
  store i64 %7, i64* %5, align 8
  store i32 0, i32* %6, align 4
  %8 = load i32*, i32** @lru_locks, align 8
  %9 = load i64, i64* %5, align 8
  %10 = getelementptr inbounds i32, i32* %8, i64 %9
  %11 = call i32 @pthread_mutex_lock(i32* %10)
  %12 = load %struct.TYPE_8__*, %struct.TYPE_8__** @crawlers, align 8
  %13 = load i64, i64* %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %12, i64 %13
  %15 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = icmp eq i32 %16, 0
  br i1 %17, label %18, label %94

18:                                               ; preds = %2
  %19 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @settings, i32 0, i32 0), align 4
  %20 = icmp sgt i32 %19, 2
  br i1 %20, label %21, label %25

21:                                               ; preds = %18
  %22 = load i32, i32* @stderr, align 4
  %23 = load i64, i64* %5, align 8
  %24 = call i32 @fprintf(i32 %22, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i64 %23)
  br label %25

25:                                               ; preds = %21, %18
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** @crawlers, align 8
  %27 = load i64, i64* %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %26, i64 %27
  %29 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %28, i32 0, i32 10
  store i64 0, i64* %29, align 8
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** @crawlers, align 8
  %31 = load i64, i64* %5, align 8
  %32 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %30, i64 %31
  %33 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %32, i32 0, i32 9
  store i64 0, i64* %33, align 8
  %34 = load %struct.TYPE_8__*, %struct.TYPE_8__** @crawlers, align 8
  %35 = load i64, i64* %5, align 8
  %36 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %34, i64 %35
  %37 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %36, i32 0, i32 0
  store i32 1, i32* %37, align 8
  %38 = load %struct.TYPE_8__*, %struct.TYPE_8__** @crawlers, align 8
  %39 = load i64, i64* %5, align 8
  %40 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %38, i64 %39
  %41 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %40, i32 0, i32 8
  store i64 0, i64* %41, align 8
  %42 = load %struct.TYPE_8__*, %struct.TYPE_8__** @crawlers, align 8
  %43 = load i64, i64* %5, align 8
  %44 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %42, i64 %43
  %45 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %44, i32 0, i32 7
  store i64 0, i64* %45, align 8
  %46 = load %struct.TYPE_8__*, %struct.TYPE_8__** @crawlers, align 8
  %47 = load i64, i64* %5, align 8
  %48 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %46, i64 %47
  %49 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %48, i32 0, i32 6
  store i64 0, i64* %49, align 8
  %50 = load i64, i64* %4, align 8
  %51 = load i64, i64* @LRU_CRAWLER_CAP_REMAINING, align 8
  %52 = icmp eq i64 %50, %51
  br i1 %52, label %53, label %56

53:                                               ; preds = %25
  %54 = load i64, i64* %5, align 8
  %55 = call i64 @do_get_lru_size(i64 %54)
  store i64 %55, i64* %4, align 8
  br label %56

56:                                               ; preds = %53, %25
  %57 = load i64, i64* %4, align 8
  %58 = icmp ne i64 %57, 0
  br i1 %58, label %59, label %62

59:                                               ; preds = %56
  %60 = load i64, i64* %4, align 8
  %61 = add i64 %60, 1
  store i64 %61, i64* %4, align 8
  br label %62

62:                                               ; preds = %59, %56
  %63 = load i64, i64* %4, align 8
  %64 = load %struct.TYPE_8__*, %struct.TYPE_8__** @crawlers, align 8
  %65 = load i64, i64* %5, align 8
  %66 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %64, i64 %65
  %67 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %66, i32 0, i32 1
  store i64 %63, i64* %67, align 8
  %68 = load i64, i64* %5, align 8
  %69 = load %struct.TYPE_8__*, %struct.TYPE_8__** @crawlers, align 8
  %70 = load i64, i64* %5, align 8
  %71 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %69, i64 %70
  %72 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %71, i32 0, i32 2
  store i64 %68, i64* %72, align 8
  %73 = load %struct.TYPE_8__*, %struct.TYPE_8__** @crawlers, align 8
  %74 = load i64, i64* %5, align 8
  %75 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %73, i64 %74
  %76 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %75, i32 0, i32 5
  store i64 0, i64* %76, align 8
  %77 = load %struct.TYPE_8__*, %struct.TYPE_8__** @crawlers, align 8
  %78 = load i64, i64* %5, align 8
  %79 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %77, i64 %78
  %80 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %79, i32 0, i32 4
  store i64 0, i64* %80, align 8
  %81 = load %struct.TYPE_8__*, %struct.TYPE_8__** @crawlers, align 8
  %82 = load i64, i64* %5, align 8
  %83 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %81, i64 %82
  %84 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %83, i32 0, i32 3
  store i64 0, i64* %84, align 8
  %85 = load %struct.TYPE_8__*, %struct.TYPE_8__** @crawlers, align 8
  %86 = load i64, i64* %5, align 8
  %87 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %85, i64 %86
  %88 = bitcast %struct.TYPE_8__* %87 to i32*
  %89 = call i32 @do_item_linktail_q(i32* %88)
  %90 = load i32, i32* @crawler_count, align 4
  %91 = add nsw i32 %90, 1
  store i32 %91, i32* @crawler_count, align 4
  %92 = load i32, i32* %6, align 4
  %93 = add nsw i32 %92, 1
  store i32 %93, i32* %6, align 4
  br label %94

94:                                               ; preds = %62, %2
  %95 = load i32*, i32** @lru_locks, align 8
  %96 = load i64, i64* %5, align 8
  %97 = getelementptr inbounds i32, i32* %95, i64 %96
  %98 = call i32 @pthread_mutex_unlock(i32* %97)
  %99 = load i32, i32* %6, align 4
  %100 = icmp ne i32 %99, 0
  br i1 %100, label %101, label %106

101:                                              ; preds = %94
  %102 = call i32 (...) @STATS_LOCK()
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @stats_state, i32 0, i32 0), align 4
  %103 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @stats, i32 0, i32 0), align 4
  %104 = add nsw i32 %103, 1
  store i32 %104, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @stats, i32 0, i32 0), align 4
  %105 = call i32 (...) @STATS_UNLOCK()
  br label %106

106:                                              ; preds = %101, %94
  %107 = load i32, i32* %6, align 4
  ret i32 %107
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @fprintf(i32, i8*, i64) #1

declare dso_local i64 @do_get_lru_size(i64) #1

declare dso_local i32 @do_item_linktail_q(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1

declare dso_local i32 @STATS_LOCK(...) #1

declare dso_local i32 @STATS_UNLOCK(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
